@@ -12,6 +12,27 @@ targetCompatibility = '1.8'
 // select one version of the Engine:
 ext.jmonkeyengineVersion = '3.4.0-stable' // from mavenCentral
 
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) { // compile-time options:
+        options.compilerArgs << '-Xdiags:verbose'
+        options.compilerArgs << '-Xlint:unchecked'
+        options.deprecation = true
+        options.encoding = 'UTF-8'
+    }
+    tasks.withType(JavaExec) { // runtime options:
+        args = []
+        classpath sourceSets.main.runtimeClasspath
+        //debug true
+        enableAssertions true
+        //jvmArgs '-verbose:gc'
+        //jvmArgs '-Xbatch'
+        //jvmArgs '-Xms512m', '-Xmx512m'
+        //jvmArgs '-XX:+PrintCompilation'
+        //jvmArgs '-XX:+UseConcMarkSweepGC'
+        jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
+    }
+}
+
 repositories {
     //mavenLocal()
     mavenCentral()
@@ -61,4 +82,19 @@ dependencies {
     //implementation 'com.github.stephengold:Heart:7.1.0'
     //implementation 'com.simsilica:sim-math:1.4.1'
     //runtimeOnly 'org.jmonkeyengine:jme3-testdata:' + jmonkeyengineVersion
+}
+
+// cleanup tasks
+clean.dependsOn('cleanDLLs', 'cleanDyLibs', 'cleanLogs', 'cleanSOs')
+task cleanDLLs(type: Delete) {
+    delete fileTree(dir: '.', include: '*.dll')
+}
+task cleanDyLibs(type: Delete) {
+    delete fileTree(dir: '.', include: '*.dylib')
+}
+task cleanLogs(type: Delete) {
+    delete fileTree(dir: '.', include: 'hs_err_pid*.log')
+}
+task cleanSOs(type: Delete) {
+    delete fileTree(dir: '.', include: '*.so')
 }
